2011-12-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_oem_specific_message):
	Fix bug loading incorrect tables.

	* libfreeipmi/sel-parse/ipmi-sel-parse-string-intel.c (ipmi_sel_parse_output_intel_event_data2_event_data),
	libfreeipmi/include/freeipmi/spec/ipmi-slave-address-oem-spec.h:
	Remove IPMI_GENERATOR_ID_OEM_INTEL_BIOS_POST macro, which was only
	supposed to be an example in Intel documentation.
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* Branch Release-1_1_0_branch for FreeIPMI 1.1.0 stable branch 
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* Update documentation for Quanta QSSC-S4R/Appro GB812X-CN

2011-12-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru-parse/: Support IPMI_FRU_PARSE_ERR_DEVICE_BUSY error code.

	* ipmi-fru/: Do not consider a busy device a fatal error.

	* Document Appro GB812X-CN IPMI compliance issues.

2011-12-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support IPMI_FLAGS_IGNORE_AUTHENTICATION_CODE
	workaround flag.

	* ipmi-sensors/: Support 'ignoreauthcode' workaround flag.

2011-12-16  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl, contrib/pet/README: Support and
	document NSCA.

2011-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/cmds/libfreeipmi/cmds/ipmi-pef-and-alerting-cmds.c (fill_cmd_set_pef_configuration_parameters_pef_control):
	Fix config setting bug for Enable_PEF_Event_Messages.

2011-12-15  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/README: Updated information about Poweredge 1950.

2011-12-14  Albert Chu <chu11@llnl.gov>

	* contrib/pet/README: Fix some text and formatting.

	* libfreeipmi/src/util/pimi-sensor-and-event-code-tables-util.c (_supermicro_oem_temp_level_sensor_supported):
	Common function for common code.

2011-12-14  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/: Support 'perf' token option.

2011-12-13  Albert Chu <chu11@llnl.gov>

	Build system rework.
