@@ -44,8 +44,6 @@ FIID_FIELD_MAKES_PACKET_SUFFICIENT - indicates field or fields are "sufficient" 
 /*
  * Intel Node Manager
  *
- * http://download.intel.com/support/motherboards/server/s5500wb/sb/s5500wb_tps_1_0.pdf
- * 
  * For Intel Chips, not just Intel Motherboards.  Confirmed for:
  *
  * Intel S5500WB/Penguin Computing Relion 700
